2006-05-15 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig:
	- Added ability to invoke other guis from within lt_analysis_gui. Using this for recently developed frequency_sweep analysis GUI.
	- Added a box on the GUI itself that displays useful information, e.g. guidelines for user, task being executed, status etc.
	- Added a checkbox to let user specify if the stage position needs to be filtered or not, at the time of loading the file itself.
	- Added ability to view spectrogram. (only one file at a time, no overlay). Useful to quickly diagnose frequency sweep data.
	- Removed frequency response checkbox. A whole new sub-gui serves its purpose now.
	- several other minor modifications here and there.

	* fsanalysis_subgui.m, fsanalysis_subgui.fig:
	- The subgui for frequency sweep analysis, that can be called from lt_analysis_gui.
	- Works for the data analyzed so far.	 	

2006-05-10 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: One step closer to analyzing frequency sweep data. Also couple of improvements in how removal and reloading of datasets is handled.

2006-05-03 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
		- Added ability to attach frequency-sweep excitation data with tracker log. 
		- Made some progress towards processing frequency sweep data, left incomplete.
	* lt_analysis_gui.fig: Some cosmetic improvements and disambiguation.
2006-04-28 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Turned off 'pretty_plot' command for main figure. According to profiler it was taking a long time to execute. Should came back to it and find out why.

2006-04-21 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Turned off filtering of stage. Untill this option is made accessible through GUI, filtering would have to be done manually. Automatic filtering seems to be a bad idea when tracking is lost and the originial file contains uneven time-stamps for a small span.
