@@ -24,7 +24,7 @@ function varargout = guidetemplate0(varargin)
 
 % Edit the above text to modify the response to help guidetemplate0
 
-% Last Modified by GUIDE v2.5 15-May-2006 16:50:12
+% Last Modified by GUIDE v2.5 17-May-2006 08:50:58
 
 % Begin initialization code - DO NOT EDIT
 gui_Singleton = 1;
@@ -88,7 +88,7 @@ varargout{1} = handles.output;
 function button_selectFS_Callback(hObject, eventdata, handles)
 % Select files associated with frequency sweep on bead on cell
 % Only display those files which have magdata associated with them
-global g
+global g 
 igood = findgood(g.magdata,handles.lta.placeholder.magdata);
 if isempty(igood)
     errordlg(['There is no file for which Frequency Sweep data is attached to. ',...
@@ -100,9 +100,12 @@ else
     [selec,ok] = listdlg('ListString',get(handles.lta.menu_files,'String'),...
         'InitialValue',1,...
         'OKstring','Select',...
-        'Name','Select bead-on-cell freq sweep file(s)');
+        'Name','Select real experiment freq sweep file(s)');
     if ok
-        set(handles.button_selectFS,'UserData',igood(selec));
+        % Now detect segments for this files and put everything on UserData
+        r.iseg = detectsegments(igood(selec),handles);
+        r.fsid = igood(selec);
+        set(handles.button_selectFS,'UserData',r);
     end
 end
 
@@ -123,7 +126,10 @@ else
         'InitialValue',1,'OKstring','Select',...
         'Name','Select fixed bead freq sweep file(s)');
     if ok
-        set(handles.button_selectFixed,'UserData',igood(selec));
+        % Now detect segments for this files and put everything on UserData
+        r.iseg = detectsegments(igood(selec),handles);
+        r.fxid = igood(selec);
+        set(handles.button_selectFixed,'UserData',r);
     else
         set(handles.button_selectFixed,'UserData',[]);
     end
@@ -141,9 +147,10 @@ end
 function button_plotfs_Callback(hObject, eventdata, handles)
 global g
 dbstop if error
-fsid = get(handles.button_selectFS,'UserData');
+
+dfs = get(handles.button_selectFS,'UserData'); fsid = dfs.fsid;
 % pdid = get(handles.button_selectPD,'UserData');
-fxid = get(handles.button_selectFixed,'UserData');
+dfx = get(handles.button_selectFixed,'UserData'); fxid = dfx.fxid;
 
 if get(handles.check_compensate,'value')
     [resfix, meanfix]  = computefs(fxid,handles);
@@ -161,23 +168,31 @@ for dim = 1:4
         figure(handles.FvsAllHfigid + dim); clf;        
         title(['Freq Sweep response @ 1st to 4th harmonic: ', sdim]);        
         xlabel('Frequency [Hz]');
-        ylabel('Response [',stry,']');
+        ylabel(['Response [',stry,']']);
         hold on;        
     end
     if get(handles.check_FvsFs1,'Value')        
         figure(handles.FvsFs1figid + dim); clf;        
         title(['Freq Sweep response @ Fundamental: ', sdim]);        
         xlabel('Frequency [Hz]');
-        ylabel('Response [',stry,']');
+        ylabel(['Response [',stry,']']);
         hold on;        
     end
     if get(handles.check_FvsFs2,'Value')        
         figure(handles.FvsFs2figid + dim); clf;        
         title(['Freq Sweep response @ 2nd harmonic: ', sdim]);        
         xlabel('Frequency [Hz]');
-        ylabel('Response [',stry,']');
+        ylabel(['Response [',stry,']']);
         hold on;        
     end
+    if get(handles.check_FvsTHD,'Value')        
+        figure(handles.FvsFs2figid + dim); clf;        
+        title(['Total Harmonic Distortion: ', sdim]);        
+        xlabel('Frequency [Hz]');
+        ylabel(['% THD ']);
+        hold on;        
+    end
+    
     clrs = 'brkmgy';    
     
     for fid = 1:length(fsid) % Plot each file one by one
@@ -188,7 +203,6 @@ for dim = 1:4
 %             for xs = 1: size(resfs(1).(sdim).power,1); %loop compensation code for each test frequency
 %                 plotfs(fid).(sdim).pow(xs,:) = resfs(fid).(sdim).power(xs,:) - meanfix.(sdim).power(xs,:);                
 %             end
-disp('compensating');
         else
             dplot(fid).(sdim).power = resfs(fid).(sdim).power;
         end
@@ -225,13 +239,33 @@ disp('compensating');
         if get(handles.check_FvsFs2,'Value')
             figure(handles.FvsFs2figid + dim);
             semilogx(dplot(fid).(sdim).ftest,dyaxis(fid).(sdim).indH(:,2),['.-',clrs(fid)]);
-        end        
+        end 
+        
+        if get(handles.check_FvsTHD,'Value')
+            figure(handles.FvsTHDfigid + dim);
+            thd = (sum(dplot(fid).(sdim).power,2)./dplot(fid).(sdim).power(:,1))-1;
+            semilogx(dplot(fid).(sdim).ftest,thd,['.-',clrs(fid)]);
+        end         
     end    
 end
 dbclear if error
 
-%%***********       FREQUENCY RESPONSE COMPUTATION       ******************
-function    [res, meanres] = computefs(fids,handles)
+% ------------------------------------------------------------------------
+function slider_fseg_Callback(hObject, eventdata, handles)
+update_fseg(handles);
+% ------------------------------------------------------------------------
+function edit_fseg_Callback(hObject, eventdata, handles)
+update_fseg(handles);
+% ------------------------------------------------------------------------
+function update_fseg(handles);
+
+% --- Executes on button press in button_segpsd.
+function button_segpsd_Callback(hObject, eventdata, handles)
+
+% ------------------------------------------------------------------------
+function iseg = detectsegments(fids,handles);
+% This routine segments out the time-pos trace so that each segment contains 
+% tracking data for only one excitation frequency in the frequency sweep. 
 % Here the main challenge is automatically separating out individual
 % excitation frequency and associated tracking data.
 % Strategy: Detect when the magnet-synchoronizer signal crosses some
@@ -242,16 +276,16 @@ function    [res, meanres] = computefs(fids,handles)
 % 2. it falls between two steps of magnet DAC board.
 % this helps against DAC+ADC noise that is present only on the
 % voltage levels that correspond to the steps of DAC board.
+% All files listed in fids will be segmented one
+% by one and then indices of the segments will be returned
 % THIS ROUTINE ASSUMES THAT MAGSYNC CABLE WAS CONNECTED AND THAT THE
 % MAGDATA IS ATTACHED.
 global g
 dbstop if error
 THRESHOLD = 0.007;
-rxyz = 'rxyz';
 fail_count = 0;
 for c = 1:length(fids)
-    bpos = g.data{fids(c)}.beadpos;
-    magdata = g.magdata{fids(c)}; %LATER, TEST HERE THAT THE MAGDATA IS AVAILABLE
+    magdata = g.magdata{fids(c)};
     msync = g.data{fids(c)}.laser;
     % Now segment the data
     idx = find(diff(msync(:,2)>THRESHOLD)>0); % detect +ve edge threshold crosssings
@@ -262,29 +296,21 @@ for c = 1:length(fids)
         disp(['Error: number of edge-detection crossings do not match',num2str(fids(c))]);
         goon =questdlg(['Error: number of edge-detection crossings do not match', ...
             num2str(fids(c)),'What is your wish?'], 'Ignore and move to next file', ...
-                       'Debug');
+            'Debug');
         if isequal(goon,'Debug');
-                   keyboard;
+            keyboard;
         else
             for dim = 1:4
-                res(c).(rxyz(dim)).power = [];
-                res(c).(rxyz(dim)).ftest = [];
+                iseg(fids(c)).bpos_st = [];
+                iseg(fids(c)).bpos_end = [];
+                iseg(fids(c)).icrossing = [];
             end
             fail_count = fail_count + 1;
             continue;
         end
     else
-        res(c).icrossing = idx;
-        tsrate = handles.lta.srate;
-        % Now focus down to the frequency range that user has requested
-        frange(1) = str2double(get(handles.edit_fmin,'string'));
-        frange(2) = str2double(get(handles.edit_fmax,'string'));
-        
-        fAll = magdata.info.param.fvec;
-        iwithin = find(fAll <= frange(2) & fAll >= frange(1));
-        fwithin = fAll(iwithin);
-        ixwithin = idx(iwithin);
-        res(c).ixwithin = ixwithin;
+        iseg(fids(c)).icrossing = idx;
+        fvec = magdata.info.param.fvec;        
         % Because the amplifier can go unstable for step inputs,
         % we start and stop all sinewaves exactly at zero. Because the
         % three sine waves are 120 degree apart in phase, we don't have
@@ -298,6 +324,46 @@ for c = 1:length(fids)
         else
             Nless = 0; % The bug is fixed in later versions than 2.2 by adding two extra cycles instead of one
         end
+        % Now process each segment
+        for k = 1:length(idx)
+            % remove the intial 2/3rd of cycle and last 2/3rd of cycle
+            ftest = fvec(k);
+            Ncut = ceil((2/3)*tsrate/ftest);
+            ilaser_st = ixwithin(k)+ Ncut;
+            ilaser_end = floor(ilaser_st + tsrate*(1/ftest)*(magdata.info.param.nCycles - Nless)); % points for nCycles - 1
+            % Now find contemporary bead positions
+            % Note, .laser and .beadpos MAY NOT share the same time stamps
+            ibpos_st = max(find(bpos(:,1) <= msync(ilaser_st,1)));
+            ibpos_end = max(find(bpos(:,1) <= msync(ilaser_end,1)));
+            iseg(fids(c)).bpos_st(k) = ibpos_st;
+            iseg(fids(c)).bpos_end(k) = ibpos_end;
+        end
+    end
+end
+%--------------------------------------------------------------------------
+%%***********       FREQUENCY RESPONSE COMPUTATION       ******************
+function    [res, meanres] = computefs(fids,handles)
+% 
+global g
+dbstop if error
+rxyz = 'rxyz';
+
+for c = 1:length(fids)
+    bpos = g.data{fids(c)}.beadpos;
+    magdata = g.magdata{fids(c)}; %LATER, TEST HERE THAT THE MAGDATA IS AVAILABLE
+    
+        res(c).icrossing = idx;
+        tsrate = handles.lta.srate;
+        % Now focus down to the frequency range that user has requested
+        frange(1) = str2double(get(handles.edit_fmin,'string'));
+        frange(2) = str2double(get(handles.edit_fmax,'string'));
+        
+        fAll = magdata.info.param.fvec;
+        iwithin = find(fAll <= frange(2) & fAll >= frange(1));
+        fwithin = fAll(iwithin);
+        ixwithin = idx(iwithin);
+        res(c).ixwithin = ixwithin;
+        
         % Now process each segment
         for k = 1:length(ixwithin)
             % remove the intial 2/3rd of cycle and last 2/3rd of cycle
@@ -354,7 +420,7 @@ for c = 1:length(fids)
                 end %looping through harmonics
             end % looping through dimensions
         end % looping through segments
-    end % testing if crossing detections matched    
+      
 end % looping through files
 
 dbclear if error
@@ -490,3 +556,31 @@ function menu_yaxis_CreateFcn(hObject, eventdata, handles)
 if ispc && isequal(get(hObject,'BackgroundColor'), get(0,'defaultUicontrolBackgroundColor'))
     set(hObject,'BackgroundColor','white');
 end
+
+
+% --- Executes during object creation, after setting all properties.
+function edit_fseg_CreateFcn(hObject, eventdata, handles)
+% hObject    handle to edit_fseg (see GCBO)
+% eventdata  reserved - to be defined in a future version of MATLAB
+% handles    empty - handles not created until after all CreateFcns called
+
+% Hint: edit controls usually have a white background on Windows.
+%       See ISPC and COMPUTER.
+if ispc && isequal(get(hObject,'BackgroundColor'), get(0,'defaultUicontrolBackgroundColor'))
+    set(hObject,'BackgroundColor','white');
+end
+
+
+
+% --- Executes during object creation, after setting all properties.
+function slider_fseg_CreateFcn(hObject, eventdata, handles)
+% hObject    handle to slider_fseg (see GCBO)
+% eventdata  reserved - to be defined in a future version of MATLAB
+% handles    empty - handles not created until after all CreateFcns called
+
+% Hint: slider controls usually have a light gray background.
+if isequal(get(hObject,'BackgroundColor'), get(0,'defaultUicontrolBackgroundColor'))
+    set(hObject,'BackgroundColor',[.9 .9 .9]);
+end
+
+
